--- a/README
+++ b/README
@@ -2,18 +2,16 @@
 README: PetIGA
 ==============
 
-:Author:       Lisandro Dalcin, Nathaniel Collier
+:Authors:      Lisandro Dalcin, Nathaniel Collier
 :Contact:      dalcinl@gmail.com, nathaniel.collier@gmail.com
-:Organization: CONICET_, KAUST_
+:Institutions: CONICET_, KAUST_
 
 .. _CONICET:  http://www.conicet.gov.ar/
 .. _KAUST:    http://www.kaust.edu.sa/
 
-
-- To build and install this package, you must meet the following
-  requirements.
-
-  + PETSc_ 3.2
-
+This software framework implements a NURBS-based Galerkin finite
+element method (FEM), popularly known as *isogeometric analysis*
+(IGA). It is heavily based on PETSc_, the *Portable, Extensible
+Toolkit for Scientific Computation*.
 
 .. _PETSc:  http://www.mcs.anl.gov/petsc/
